CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT("memps")

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wall -O0 -g -pg")

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET (SOURCES
		${CMAKE_SOURCE_DIR}/memps.c
)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_EXECUTABLE (${PROJECT_NAME} ${SOURCES})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SKIP_BUILD_RPATH true)
INSTALL(FILES ${PROJECT_NAME}
  DESTINATION ${MAKE_INSTALL_PREFIX}/usr/bin RENAME memps
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE WORLD_EXECUTE)
